# gateway

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  package.json
.github/: dependabot.yaml
crates/cli/: Cargo.toml  README.md  build.rs  main.rs
crates/cli/config/: load_json.rs  load_toml.rs  load_yaml.rs  mod.rs
crates/cli/extract/: mod.rs  version.rs
crates/cli/handler/: account.rs  account_invite.rs  account_oauth2.rs  instance.rs  mod.rs  project.rs  workflow.rs
crates/cli/middleware/: error_handling.rs  mod.rs
crates/cli/server/: conn_info.rs  inter_signal.rs  mod.rs  run_default.rs  run_redirect.rs  run_secure.rs  serv_config.rs
crates/cli/service/: app_config.rs  app_database.rs  mod.rs  state_dataset.rs  state_runtime.rs
crates/core/: Cargo.toml  README.md  build.rs  lib.rs
crates/core/extract/: mod.rs  reject_json.rs  reject_path.rs  validate.rs  version.rs
crates/core/handler/: mod.rs
crates/core/handler/account/: accounts.rs  emails.rs  invitation.rs  mod.rs  password.rs
crates/core/handler/platform/: mod.rs  runtimes.rs  search.rs  webhook.rs
crates/core/handler/project/: analytics.rs  integrations.rs  members.rs  mod.rs  projects.rs  settings.rs  webhooks.rs
crates/core/handler/workflow/: editor.rs  executions.rs  mod.rs  revisions.rs  workflows.rs
crates/core/middleware/: mod.rs  observability.rs
crates/core/service/: app_config.rs  app_database.rs  conn_info.rs  mod.rs  runtime_pool.rs
crates/data/: Cargo.toml  README.md  lib.rs
crates/data/database/: mod.rs
crates/data/entity/: mod.rs
crates/data/repo/: account.rs  mod.rs  project.rs  workflow.rs
crates/database/: Cargo.toml  Makefile  README.md  build.rs  lib.rs
crates/database/config/: custom_hooks.rs  mod.rs  pool_configs.rs
crates/database/connect/: constraints.rs  mod.rs  pool_configs.rs
crates/database/database/: account.rs  mod.rs  project.rs  runtime.rs  webhook.rs  workflow.rs
crates/database/datatype/: mod.rs
crates/database/entity/: mod.rs  project.rs  runtime.rs  workflow.rs
crates/database/migrate/: mod.rs
crates/database/migration/: 001_init.up.sql  002_cloud.up.sql
crates/database/query/: mod.rs
crates/graph/: Cargo.toml  README.md  lib.rs
crates/graph/compile/: cache_graph.rs  error_report.rs  mod.rs
crates/graph/inputs/: input_edge.rs  input_node.rs  mod.rs  request_event.rs  request_graph.rs  triggers.rs
crates/graph/outputs/: hook_registry.rs  mod.rs  output_edge.rs  output_node.rs  report_bundle.rs  response_graph.rs  task_registry.rs
crates/graph/worker/: graph_compiler.rs  graph_executor.rs  internal_graph.rs  mod.rs
crates/runtime/: Cargo.toml  README.md  build.rs  lib.rs
crates/runtime/_/client/: client_builder.rs  mod.rs  task_registry.rs
crates/runtime/_/runtime/: connection_instance.rs  runtime_manager.rs
crates/runtime/client/: builder.rs  client_builder.rs  mod.rs
crates/runtime/config/: custom_hooks.rs  mod.rs  pool_manager.rs  runtime_config.rs
crates/runtime/instance/: custom_hooks.rs  mod.rs  pool_config.rs
crates/runtime/manager/: instance_client.rs  manager_config.rs  mod.rs  runtime_endpoint.rs
crates/runtime/protobuf/: runtime.proto
crates/runtime/runtime/: connection_instance.rs  connection_metadata.rs  mod.rs  runtime_manager.rs
crates/server/: Cargo.toml  README.md  build.rs  lib.rs
crates/server/extract/: auth_state.rs  auth_token.rs  conn_info.rs  mod.rs  reject_json.rs  reject_path.rs  validate.rs  version.rs
crates/server/handler/: mod.rs
crates/server/handler/accounts/: accounts.rs  auth.rs  mod.rs
crates/server/handler/projects/: members.rs  mod.rs  projects.rs  webhooks.rs
crates/server/handler/workflows/: analytics.rs  editor.rs  mod.rs
crates/server/middleware/: auth_guards.rs  error_handling.rs  mod.rs  observability.rs  utility.rs
crates/server/service/: app_config.rs  app_hashing.rs  argon2_hasher.rs  conn_info.rs  database_err.rs  graph_queue.rs  mod.rs  scheduler.rs  socket_room.rs
docker/on-premise/: docker-compose.yaml
