# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "./crates/cli",
    "./crates/database",
    "./crates/graph",
    "./crates/runtime",
    "./crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Axiston License 1.0"
publish = false

authors = ["Axiston <contact@axiston.com>"]
repository = "https://github.com/axiston/axiston"
homepage = "https://github.com/axiston/axiston"
documentation = "https://docs.rs/axiston"

[workspace.dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
futures = { version = "0.3", features = [] }
async-trait = { version = "0.1.83", features = [] }

tracing = { version = "0.1", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-opentelemetry = { version = "0.28", features = [] }
opentelemetry = { version = "0.27", features = [] }

axum = { version = "0.7", features = ["http2", "macros", "ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-test = { version = "16.4", features = [] }

sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
sea-orm-cli = { version = "1.1", features = ["runtime-tokio-rustls"] }

thiserror = { version = "2.0", features = [] }
anyhow = { version = "1.0", features = ["backtrace"] }

derive_more = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.11", features = [] }
serde_json = { version = "1.0", features = [] }

bytes = { version = "1.9", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
base64 = { version = "0.22", features = [] }
ecow = { version = "0.2", features = ["serde"] }

axiston-database = { path = "./crates/database", version = "0.1.0" }
axiston-graph = { path = "./crates/graph", version = "0.1.0" }
axiston-runtime = { path = "./crates/runtime", version = "0.1.0" }
axiston-server = { path = "./crates/server", version = "0.1.0" }
