# https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "./crates/cli",
    "./crates/database",
    "./crates/graph",
    "./crates/runtime",
    "./crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Axiston License 1.0"
publish = false

authors = ["Axiston <contact@axiston.com>"]
repository = "https://github.com/axiston/axiston"
homepage = "https://github.com/axiston/axiston"
documentation = "https://docs.rs/axiston"

# TODO: Import axiston-database-migrate from crates.io.
# TODO: Import axiston-database-schema from crates.io.

[workspace.dependencies]
axiston-db-generate = { path = "../database/crates/generate" }
axiston-db-migrate = { path = "../database/crates/migrate" }
axiston-db-connect = { path = "./crates/database", version = "0.1.0" }

axiston-graph = { path = "./crates/graph", version = "0.1.0" }
axiston-runtime = { path = "./crates/runtime", version = "0.1.0" }
axiston-server = { path = "./crates/server", version = "0.1.0" }

tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
futures = { version = "0.3", features = [] }
thiserror = { version = "2.0", features = [] }
anyhow = { version = "1.0", features = ["backtrace"] }

tracing = { version = "0.1", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-opentelemetry = { version = "0.28", features = [] }
opentelemetry = { version = "0.27", features = [] }

axum = { version = "0.7", features = ["http2", "macros", "ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-test = { version = "16.4", features = [] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

derive_more = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.11", features = [] }
serde_toml = { package = "toml", version = "0.8", features = [] }
serde_json = { version = "1.0", features = [] }
ts-rs = { version = "10.1", features = ["uuid-impl"] }

bytes = { version = "1.9", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
base64 = { version = "0.22", features = [] }
ecow = { version = "0.2", features = ["serde"] }
cron = { version = "0.13", features = [] }
ipnet = { version = "2.10", features = ["serde"] }
