# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[[bin]]
name = "axiston"
path = "main.rs"

[features]
default = []

# - Enables HTTPS support with the axum-server crate.
# - Spawns a server that redirects incoming HTTP requests.
support-https = ["dep:axum-server"]

# - Builds the graph editor app into the app directory.
# - Enables service that serves files from app directory.
support-files = []

[dependencies]
axiston-server = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }

axum = { workspace = true }
axum-server = { workspace = true, optional = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_toml = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
