# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-data"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
tokio = { version = "1.39", features = [] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "time"] }
# serde = { version = "1.0", features = ["derive"] }

time = { version = "0.3", features = [] }
thiserror = { version = "1.0", features = [] }
tracing = { version = "0.1", features = [] }
