# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-graph"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[features]
default = []

[dependencies]
axiston-database = { workspace = true }
axiston-runtime = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "1.0", features = ["full"] }
thiserror = { version = "1.0", features = [] }

petgraph = { version = "0.6", features = [] }
croner = { version = "2.0", features = [] }
uuid = { version = "1.10", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = { version = "1.0", features = [] }
