# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-graph"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.11", features = [] }
thiserror = { version = "1.0", features = [] }
derive_more = { version = "1.0", features = ["full"] }
ts-rs = { version = "10.0", features = ["uuid-impl"] }

petgraph = { version = "0.6", features = [] }
uuid = { version = "1.11", features = ["serde", "v4"] }
cron = { version = "0.12", features = [] }
tracing = { version = "0.1", features = [] }
time = { version = "0.3", features = [] }

[dev-dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
serde_json = { version = "1.0", features = [] }
