# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-graph"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[features]
default = []

[dependencies]
petgraph = { version = "0.6", features = [] }

tracing = { workspace = true }
thiserror = { workspace = true }

derive_more = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
ts-rs = { workspace = true }

uuid = { workspace = true }
cron = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
