# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-rt-connect"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[dependencies]
axiston-rt-schema = { workspace = true }

thiserror = { workspace = true }
derive_more = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

tonic = { version = "0.12", features = [] }
prost = { version = "0.13", features = [] }
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }

tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
