# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-rt-connect"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[dependencies]
axiston-rt-schema = { workspace = true }

tokio = { workspace = true }
deadpool = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

derive_more = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
