# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[features]
default = []

# support-password

# - Enables OAuth2 authorization flows/methods.
# - Typically used for the in-cloud deployment.
support-oauth2 = []
# - Enables invite authorization flows/methods.
# - Typically used for the on-premise deployment.
support-invite = []

[dependencies]
axiston-db-connect = { workspace = true }
axiston-db-migrate = { workspace = true }

axiston-graph = { workspace = true }
axiston-runtime = { workspace = true }

tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal"] }
futures = { version = "0.3", features = [] }
anyhow = { version = "1.0", features = ["backtrace"] }
tracing = { version = "0.1", features = [] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
derive_more = { version = "1.0", features = ["full"] }
ts-rs = { version = "10.0", features = [] }

axum = { version = "0.7", features = ["http2", "macros", "ws"] }
axum-server = { version = "0.7", optional = true, features = ["tls-rustls"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
utoipa = { version = "5.1.3", features = [] }
utoipauto = { version = "0.2.0", features = [] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
validator = { version = "0.18", features = [] }

rand = { version = "0.8.5", features = [] }
argon2 = { version = "0.5.3", features = ["std"] }

bytes = { version = "1.8", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
base64 = { version = "0.22", features = [] }
ecow = { version = "0.2.3", features = ["serde"] }

[dev-dependencies]
axum-test = { version = "16.3", features = [] }

[build-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
